--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chatui/core": "^2.4.2",
     "@heroicons/react": "^2.2.0",
     "@mercadopago/sdk-react": "^0.0.17",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.7",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.344.0",
@@ -20,12 +22,17 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.14.1",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.15.0",
+    "remark-gfm": "^4.0.0",
     "string-similarity": "^4.0.4",
+    "styled-components": "^6.1.14",
+    "styled-jsx": "^5.1.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.12.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
