refactor: remove analysis tab and enhance journal functionality
- Remove analysis tab and related components - Remove qualitative feedback from journal entries - Update Dashboard UI and mood tracking - Add new chat components and migrations - Update routing and navigation structure

--- a/.env
+++ b/.env
@@ -7,4 +7,6 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 
 # Other Keys
 VITE_MERCADOPAGO_PUBLIC_KEY=TEST-12345678-9012-3456-7890-123456789012
-VITE_DEEPSEEK_API_KEY=sk-4ed21000ceb7454aa2a4ce89f5ca565f
+
+# DeepInfra API Key (Get yours at https://deepinfra.com)
+VITE_DEEPSEEK_API_KEY=sk-77d11f5587524188911816763834f829
