--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@chatui/core": "^2.4.2",
     "@heroicons/react": "^2.2.0",
     "@mercadopago/sdk-react": "^0.0.17",
+    "@reduxjs/toolkit": "^2.5.1",
     "@supabase/supabase-js": "^2.39.0",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.7",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.14.1",
     "react-markdown": "^9.0.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.15.0",
     "remark-gfm": "^4.0.0",
