--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.7",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
