Add memory system with 150 memory limit and user name personalization

--- a/package.json
+++ b/package.json
@@ -7,7 +7,26 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "process-embeddings": "node scripts/process_embeddings_job.js",
+    "start-cron": "node scripts/cron-job.js",
+    "start-memory-service": "pm2 start scripts/cron-job.js --name memory-service",
+    "test-memory-service": "node scripts/test_memory_service.js",
+    "setup-memory-service": "./scripts/setup_memory_service.sh",
+    "memory-dashboard": "node scripts/memory_dashboard.js",
+    "generate-memories": "node scripts/generate_memories_for_existing_entries.js",
+    "check-journal": "node scripts/check_journal_entries.js",
+    "create-test-entry": "node scripts/create_test_journal_entry.js",
+    "check-db": "node scripts/check_db_connection.js",
+    "direct-db-check": "node scripts/direct_db_check.js",
+    "run-memory-service": "node scripts/run_memory_service.js",
+    "create-memories": "node scripts/create_memories_for_entries.js",
+    "check-tables": "node scripts/check_table_structure.js",
+    "check-rls": "node scripts/check_rls_policies.js",
+    "add-service-key": "node scripts/add_service_key.js",
+    "check-service-key": "node scripts/check_service_key.js",
+    "prompt-service-key": "node scripts/prompt_service_key.js",
+    "update-memory-scripts": "node scripts/update_memory_scripts.js"
   },
   "dependencies": {
     "@chatui/core": "^2.4.2",
@@ -21,6 +40,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.344.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
