--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@mercadopago/sdk-react": "^0.0.17",
     "@reduxjs/toolkit": "^2.5.1",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.7",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^10.18.0",
@@ -63,6 +65,8 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/string-similarity": "^4.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
@@ -71,6 +75,7 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
+    "typescript-eslint": "^8.26.0",
     "vite": "^5.0.12"
   },
   "description": "[![TypeScript](https://img.shields.io/badge/TypeScript-4.9.5-blue.svg)](https://www.typescriptlang.org/) [![React](https://img.shields.io/badge/React-18.2.0-blue.svg)](https://reactjs.org/) [![Tailwind CSS](https://img.shields.io/badge/Tailwind_CSS-3.3.0-38B2AC.svg)](https://tailwindcss.com/) [![Framer Motion](https://img.shields.io/badge/Framer_Motion-10.12.4-purple.svg)](https://www.framer.com/motion/) [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)",
